<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, WarehouseActivity!</string>
    <string name="title">Warehouse</string>
    <string name="app_name">Warehouse</string>
    <string name="warehouse_title">Warehouse</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="order_details">Order Details</string>
    <string name="shipping">Shipping</string>
    <string name="server_address_text">Server Address</string>
    <string name="username_text">User</string>
    <string name="password_text">Password</string>
    <string name="save_password_checkbox">Save Password</string>
    <string name="select_profile_spinner">Select Profile</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="register_new">New</string>
    <string name="scan">Scan</string>
    <string name="stocking">Stocking</string>
    <string name="racks">Racks</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="search_conditions">Search Conditions</string>
    <string name="product_name">Product Name</string>
    <string name="zero">0</string>
    <string name="sku">SKU</string>
    <string name="profiles">Profiles</string>
    <string name="defaults">Defaults</string>
    <string name="camera">Camera</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="server">Server</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="main_menu">Main Menu</string>
    <string name="packing">Packing</string>
    <string name="picking">Picking</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="test">Test</string>
    <string name="port">Port</string>
    <string name="default_port">80</string>
    <string name="product_description">Product Description</string>
    <string name="product_details">Product Details</string>
    <string name="profile_name">Profile Name</string>
    <string name="api_key">API Key</string>
    <string name="profile_scan">Profile Scan (QR Code)</string>
    <string name="blank_status">⌛</string>
    <string name="stock_in">Stock In</string>
    <string name="destock">Destock</string>
    <string name="register_barcode">Register Barcode</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="edit_product_details">Edit Product</string>
    <string name="products_counter">Products</string>
    <string name="units_counter">Units</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="permalink">Permalink</string>
    <string name="cancel">Cancel</string>
    <string name="is_listed">Listed?</string>
    <string name="product_edit">Edit Product</string>
    <string name="allow_unsigned_cert">Allow Unsigned Cert</string>
    <string name="scan_stocking">Consecutive Scan Stocking</string>
    <string name="supplier">Supplier</string>
    <string name="order_number">Order Number</string>
	<string name="register_product">Register Product</string>
	<string name="new_product">New Product</string>
	<string name="existing_product">Existing Product</string>
	<string name="register_to_new_product">New Product</string>
	<string name="register_to_existing_product">Existing Product</string>
	<string name="update">Update</string>
	<string name="about_warehouse">About Warehouse</string>
	<string name="version">Version</string>
	<string name="your_version">Installed Version</string>
	<string name="app_store_version">Play Store Version</string>
	<string name="development_version">Development Version</string>
	<string name="creator_and_copyright_title">Created by &amp; Copyright of</string>
	<string name="genshin">Genshin Souzou Kabushiki Kaisha\n [Phantom Creation Inc.]</string>
	<string name="genshin_url">http://genshin.org</string>
	<string name="pilot_and_producer">Pilot &amp; Producer</string>
	<string name="freestyle">Free Style Inc.</string>
	<string name="freestyle_url">http://fs-hobby.jp</string>
	<string name="icon_bases">Base Icon Images:</string>
	<string name="pixture_hide">Hide of PIXTURE STUDIO</string>
	<string name="pixture_url">http://pixture.com</string>
	<string name="serverside_developer">Serverside Development</string>
	<string name="camplight">CampLight Ltd.</string>
	<string name="camplight_url">http://camplight.net</string>
	<string name="target_container">Target Container</string>
	<string name="select">Select</string>
	<string name="count">Count</string>
	<string name="lock">Lock</string>
	<string name="saved">Saved</string>
	<string name="scan_cancelled">Scan Cancelled</string>
	<string name="select_a_product">Please Select A Product</string>
	<string name="build">Build</string>
	<string name="no_profiles">No Profiles Found</string>
	<string name="please_register_profile">Please register a profile.</string>
	<string name="register">Register</string>
	<string name="force_https">HTTPS?</string>
	<string name="blank"></string>
	<string name="new_profile_created">New Profile Created</string>
	<string name="profile_updated">Profile Updated</string>
	<string name="new_profile_ready">New Profile Ready</string>
	<string name="profile_deleted">Profile Deleted</string>

	<!-- alert content -->
	<string name="unregistered_barcode_title">Unregistered Barcode</string>
	<string name="unregistered_barcode_new_product">This Barcode is not registered.\nRegister a new product?</string>

	<!-- GSA Dialog Text -->
	<string name="searching">Searching</string>
	<string name="scanning">Scanning</string>
	<string name="connecting">Connecting</string>
	<string name="loading">Loading</string>
	<string name="saving">Saving</string>
	<string name="deleting">Deleting</string>
	<string name="ordernumber_dummy">R000000000</string>
	<string name="customer_name_dummy">Spree Customer</string>
	<string name="three_zero">000</string>

	<!-- 追加分 -->
	<string name="edit_order_details">Edit Order</string>
	<string name="order_edit">Edit Order</string>
	<string name="customer_info">Customer Infomation</string>
	<string name="adjustment">Adjustment</string>
	<string name="payment_method">Payment Method</string>
	<string name="returned_goods">Returned Goods</string>
	<string name="currency_unit">Dollar</string>
	<string name="none">None</string>
	<string name="order_date">Date of Order</string>
	<string name="payment_state">State of Payment</string>
	<string name="picking_state">State of Picking</string>
	<string name="packing_state">State of Packing</string>
	<string name="shipment_state">State of Shipment</string>
	<string name="sort">Sort</string>
	<string name="new_order">New Order</string>
	<string name="total">Total</string>
	<string name="subtotal">Subtotal</string>
	<string name="number">Num</string>
	<string name="cost">Shipping Cost</string>
	<string name="state">State</string>
	<string name="bill_address">Bill Address</string>
	<string name="ship_address">Ship Address</string>
	<string name="guest_order">Guest Order</string>
	<string name="email">E-mail</string>

	<string name="select_container">：Stocking this container?</string>
	<string name="register_this_product">Register this product?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="stock_number">Number of stock?</string>
	<string name="name">Name</string>
	<string name="register_this_container">Register this container?</string>
	<string name="stock_this_product">Stocking this product?</string>
	<string name="stock_done">Stock in</string>

	<string name="new_product_add">Add Product</string>
	<string name="add">Add</string>
	<string name="create_new_order">Create New Order?</string>
	<string name="created">Created</string>
	<string name="edit_address">Edit Address</string>
	<string name="edit_payment">Edit Payment</string>
	<string name="edit_adjustment">Edit Adjustment</string>
	<string name="edit_shipment">Edit Shipment</string>
	<string name="account">Account</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="address_1">Address 1</string>
	<string name="address_2">Address 2</string>
	<string name="city">City</string>
	<string name="zip_code">Zip Code</string>
	<string name="states">State</string>
	<string name="country">Country</string>
	<string name="phone">Telephone Number</string>
	<string name="use_bill_address">Use Bill Address</string>
	<string name="add_this_product">Add this product?</string>
	<string name="fill_blank">Fill in blank</string>

	<string name="new_register">New Register</string>
	<string name="rack_name">Rack Name</string>
	<string name="rack_code">Rack Code</string>
	<string name="container_component">Container Component</string>
	<string name="address">Address</string>
	<string name="note">Note</string>

	<string name="input_search">Input Search Word</string>
	<string name="date_range">Date Rande</string>
	<string name="start">Start</string>
	<string name="end">End</string>
	<string name="firstname_start">First Name Start</string>
	<string name="lastname_start">Last Name Start</string>
	<string name="treated_order">Show Treated Order</string>
	<string name="check_item">Checked Item</string>
	<string name="check_complete">completed</string>
	<string name="check_void">blank out</string>
	<string name="attention_void">Are you sure? :blank out</string>
	<string name="attention_complete">Are you sure? :complete</string>
	<string name="amount_owed">Amount owed：</string>

	<string name="close">Close</string>

	<string-array name="order_search">
	    <item>cart</item>
	    <item>address</item>
	    <item>shipment</item>
	    <item>payment</item>
	    <item>complete</item>
	    <item>confirmation</item>
	    <item>cansel</item>
	    <item>wait returned goods</item>
	    <item>done returned goods</item>
	    <item>restart</item>
	</string-array>

</resources>
