<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView 
	    android:text="@string/date_range"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<TextView 
	        android:text="@string/start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <EditText 
	        android:id="@+id/range_start"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginRight="10dp"
	        android:hint="@string/start" />
	    <TextView
	        android:text="@string/end"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
		<EditText 
	        android:id="@+id/range_end"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/end" />
	</LinearLayout>
	
	<TextView 
	    android:text="@string/state"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	<Spinner
	    android:id="@+id/state_spinner"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	</Spinner>
	
	<TextView 
	    android:text="@string/orders"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	<EditText 
	    android:id="@+id/order"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/orders"/>
	
	<TextView 
	    android:text="@string/email"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	<EditText 
	    android:id="@+id/email"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/email" />
	
	<TextView 
	    android:text="@string/firstname_start"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	<EditText 
	    android:id="@+id/firstname"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/firstname_start" />
	
	<TextView 
	    android:text="@string/lastname_start"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	<EditText 
	    android:id="@+id/lastname"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/lastname_start" />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <CheckBox 
	        android:id="@+id/checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <TextView 
	        android:text="@string/treated_order"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	</LinearLayout>
	
	<Button 
	    android:id="@+id/button"
	    android:text="@string/search"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center" />
	
</LinearLayout>
</ScrollView>