<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:text="@string/new_product_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
		<EditText 
	        android:id="@+id/new_product_name"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/product_name" />
	    <Button 
	        android:id="@+id/select_button"
	        android:text="@string/select"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
		<EditText 
	        android:id="@+id/new_product_num"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/count" />

	    <TextView
	        android:text="@string/units_counter"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content" >
	    </TextView>
        
    </LinearLayout>
    
    <Button
        android:id="@+id/add_button"
        android:text="@string/add"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>