<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:text="@string/rack_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText 
        android:id="@+id/rack_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rack_name" />
    
    <TextView 
        android:text="@string/rack_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText 
        android:id="@+id/rack_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rack_code" />
    
    <TextView 
        android:text="@string/container_component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText 
        android:id="@+id/container_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/container_component" />
    
    <TextView 
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText 
        android:id="@+id/rack_address"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:hint="@string/address" />
    
    <TextView 
        android:text="@string/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText 
        android:id="@+id/rack_note"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:hint="@string/note" />
    
    <Button 
        android:id="@+id/new_register"
        android:text="@string/new_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>
</ScrollView>