<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/order_details_payment_still"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

	<ListView
	    android:id="@+id/order_details_payment_list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:divider="@color/black" >

	</ListView>

    <Button
		android:id="@+id/order_details_payment_new_button"
		android:text="@string/register_new"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp" />

    <TextView
        android:text="@string/check_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

		<Button
		    android:id="@+id/order_details_payment_complete"
		    android:text="@string/check_complete"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		<Button
		    android:id="@+id/order_details_payment_void"
		    android:text="@string/check_void"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>